--- a/Documents/barcode.html
+++ b/Documents/barcode.html
@@ -1,63 +1,110 @@
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
+    <title>RhoBrowser</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
 
-  <script type="text/javascript" charset="utf-8" src="/js/live.js"></script>
+    <link rel="stylesheet" href="/bootstrap-3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/style.css">
 
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/skeleton.css">
-  <link rel="stylesheet" href="css/custom.css">
+    <script src="/jquery/jquery-3.1.1.min.js" type="text/javascript"></script>
+    <script src="/bootstrap-3.3.7/js/bootstrap.min.js" type="text/javascript"></script>
 
-
-  <script type="text/javascript" charset="utf-8" src="api/rhoapi-modules.js"></script>
-
-  <script type="text/javascript">
-    function scan_using_default_scanner(){
-      //Scan with default options
-      Rho.Barcode.take({}, scan_received);
-    }
-
-    function scan_received(params){
-      // Did we actually find a barcode ?
-      // If status is not 'ok', the scan was canceled
-
-        if (params["status"]=="ok") {
-          alert('Barcode scanning complete. Scanned barcode: '+params["barcode"]);
-        } else {
-          alert('Barcode scanning aborted');
-        }
-      Rho.Barcode.stop();
-    }
-
-    function enumerate_scanners() {
-      scanners = Rho.Barcode.enumerate();
-      alert(JSON.stringify(scanners, null, 4));
-    }
-
-  </script>
-
-
+    <script src="/api/rhoapi-modules.js" type="text/javascript"></script>
 </head>
 
 <body>
+<div class="container-fluid">
+    <h4>Barcode Scanners</h4>
 
-<div class="section">
-<div class="container">
+    <div id="alert" class="alert alert-warning hidden" role="alert"></div>
 
+    <div id="scanners" class="list-group"></div>
 
-  <div>BARCODE SCAN BODY</div>
+    <button id="enumerate" type="button" class="btn btn-block btn-primary" onclick="enumScanners();">Enumerate</button>
 
-  <div>
-    <input type="button" onclick="scan_using_default_scanner();" value="SCAN"/>
-  </>
+    <button type="button" class="btn btn-block btn-default" data-role="clear">Clear log</button>
 
-  <div>
-    <input type="button" onclick="enumerate_scanners();" value="ENUM"/>
-  </>
-
-
+    <div id="result" class="alert alert-info hidden" role="alert"></div>
 </div>
-</div>
+
+<script type="text/javascript">
+
+    function scanReceived(params) {
+        // Did we actually find a barcode ?
+        // If status is not 'ok', the scan was canceled
+
+        $("#result")
+                .removeClass("hidden")
+                .append("<div><pre><small>" + JSON.stringify(params) + "</small></pre></div>");
+
+        $.post( "http://192.168.1.49:8081/add_code", {code: '1234567890'})
+            .done(function() {
+                alert( "Data uploaded");
+            });
+
+        /*
+
+         if (params["status"]=="ok") {
+         alert('Barcode scanning complete. Scanned barcode: '+params["barcode"]);
+         } else {
+         alert('Barcode scanning aborted');
+         }
+         */
+//      Rho.Barcode.stop();
+    }
+
+    function enumScanners() {
+        $("#scanners").empty();
+        $("#alert").addClass("hidden").empty();
+
+        var scanners = Rho.Barcode.enumerate();
+
+        if ((scanners == null) || (scanners.length === 0)) {
+            $("#alert")
+                    .text("No scanners available")
+                    .removeClass("hidden");
+            return;
+        }
+
+        $("#enumerate").addClass("hidden");
+
+        for (var i = 0; i < scanners.length; i++) {
+            var scanner = scanners[i];
+
+            var item = $("<li class='list-group-item'></li>");
+            item.append("<strong>" + scanner.scannerType + "/" + scanner.friendlyName + "</strong>");
+
+            var selectButton = $("<span class='pull-right'><button type='button' class='btn btn-default btn-xs' data-role='scanner-select' data-scannerIndex='" + i + "'>Enable</button></span>");
+            item.append(selectButton);
+
+            $("#scanners").append(item);
+
+        }
+
+        $("[data-role=scanner-select]").on("click", function () {
+            $(".list-group-item").removeClass("active");
+            $(this).parent().parent().addClass("active");
+
+            var scanners = Rho.Barcode.enumerate();
+            for (var i = 0; i < scanners.length; i++) {
+                scanners[i].disable();
+            }
+
+            var idx = parseInt($(this).attr("data-scannerIndex"));
+            console.log("enabling scannerIndex", idx);
+            scanners[idx].enable({}, scanReceived);
+        });
+
+        $("[data-role=clear]").on("click", function () {
+            $("#result").empty().addClass("hidden");
+        });
+    }
+
+</script>
 
 </body>
+
 </html>
