adding button to camera page

--- a/Documents/index.html
+++ b/Documents/index.html
@@ -18,6 +18,7 @@
 <div class="container-fluid">
     <h4>RhoBrowser</h4>
     <a href="barcode.html" class="btn btn-primary btn-block">Barcode Scanners tests</a>
+    <a href="camera.html" class="btn btn-primary btn-block">Camera tests</a>
     <a href="#" style="margin-top:150px" onclick="Rho.Application.quit();" class="btn btn-danger btn-block">Quit</a>
 </div>
 
